@@ -1976,7 +1976,6 @@
                           </div>
                         </div>
                       </div>
-
                       <div class="col-md-12 api_clients_row" id="api_beyondtrust_pra_row">
                         <div class="form-group">
                           <label class="col-sm-3 control-label">{{ form.beyondtrust_pra_client_id.label }}</label>
@@ -2000,8 +1999,36 @@
                           </div>
                         </div>
                       </div>
-
-
+                      <div class="col-md-12 api_clients_row" id="api_lockself_row">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.lockself_x_ls_token.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.lockself_x_ls_token }}
+                            {{ form.lockself_x_ls_token.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.lockself_x_auth_token.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.lockself_x_auth_token }}
+                            {{ form.lockself_x_auth_token.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.lockself_host.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.lockself_host }}
+                            {{ form.lockself_host.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.lockself_organization_id.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.lockself_organization_id }}
+                            {{ form.lockself_organization_id.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
                       <div class="col-md-12 api-mode">
                         <div class="text-center mar-btm">
                           <button class="btn btn-warning" id="test_api_parser" type="button">
